[gd_scene load_steps=7 format=3 uid="uid://di7durhtnwyth"]

[ext_resource type="Script" path="res://scripts/human_player.gd" id="1_85oub"]
[ext_resource type="PackedScene" uid="uid://0tai1g1d7rgi" path="res://scenes/dino_character.tscn" id="2_lqch0"]
[ext_resource type="PackedScene" uid="uid://j8dcxw4ldxkn" path="res://scenes/ball_hit_area.tscn" id="4_m2ygi"]
[ext_resource type="Script" path="res://scripts/stamina_component.gd" id="9_6jtdw"]
[ext_resource type="PackedScene" uid="uid://fjaa5nwo51wm" path="res://scenes/sprint_meter.tscn" id="10_wq0tr"]
[ext_resource type="Script" path="res://scripts/player_controller.gd" id="11_s7nrh"]

[node name="HumanPlayer" type="Node2D"]
script = ExtResource("1_85oub")

[node name="DinoCharacter" parent="." instance=ExtResource("2_lqch0")]

[node name="BallHitArea" parent="DinoCharacter" instance=ExtResource("4_m2ygi")]

[node name="StaminaComponent" type="Node" parent="DinoCharacter"]
script = ExtResource("9_6jtdw")

[node name="SprintMeter" parent="DinoCharacter" node_paths=PackedStringArray("stamina_component") instance=ExtResource("10_wq0tr")]
z_index = 2
stamina_component = NodePath("../StaminaComponent")

[node name="PlayerController" type="Node" parent="." node_paths=PackedStringArray("dino_character")]
script = ExtResource("11_s7nrh")
dino_character = NodePath("../DinoCharacter")

[connection signal="body_entered" from="DinoCharacter/BallHitArea" to="." method="_on_ball_hit_area_body_entered"]
